chore: add DATABASE_URL

--- a/.env
+++ b/.env
@@ -8,4 +8,5 @@ PORT=4000
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 JWT_SECRET=w63!$CJ$dy%$NwwjgH&BrE2Ctv@z4dQQc
 
-DATABASE_URL="mysql://root:@localhost:3306/pichanguita"
+DATABASE_URL="mysql://root:aaron123@localhost:3306/pichanguita"
+#DATABASE_URL="mysql://root:@localhost:3306/pichanguita"
