--- a/.env
+++ b/.env
@@ -9,3 +9,7 @@ PORT=4000
 JWT_SECRET=w63!$CJ$dy%$NwwjgH&BrE2Ctv@z4dQQc
 
 DATABASE_URL="mysql://root:@localhost:3306/pichanguita"
+
+AWS_ACCESS_KEY_ID=AKIAXXX5TRUXKGSAFI6Y
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=us-east-2
